更新代码检查结果