@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2021 guerlab.net and other contributors.
+ * Copyright 2018-2022 guerlab.net and other contributors.
  *
  * Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3 (the "License");
  * you may not use this file except in compliance with the License.
@@ -56,7 +56,7 @@ public class TokenFactoryManager {
      * @return token工厂
      */
     public static <T> TokenFactory<T> getDefaultTokenFactory(Class<T> entityClass) {
-        List<TokenFactory<T>> factories = getTokenFactoriesByEntityClass0(entityClass).collect(Collectors.toList());
+        List<TokenFactory<T>> factories = getTokenFactoriesByEntityClass0(entityClass).toList();
 
         if (factories.isEmpty()) {
             throw new NotFoundCanUseTokenFactoryException();
